--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -2,7 +2,24 @@
     font-family: 'CustomFont';
     src: url('../FONT/Italianno-Regular.ttf');
   }
-  
+  @keyframes slideinleft {
+    from{
+        transform: translateX(-300px);
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+@keyframes slideIn {
+    from {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 h1 {
     font-family: 'CustomFont';
 }
@@ -10,6 +27,7 @@ body {
     background-color: #756763;
     font-family: Arial;
     margin: 0;
+    animation: slideinleft 0.3s ease-in;
 }
 .container {
     width: 100vw;
@@ -28,6 +46,7 @@ body {
     border-bottom: 1px solid #FFFFFF;
     backdrop-filter: brightness(40%);
     z-index: 9;
+    animation: slideIn 0.6s ease-out;
 }
 h1 {
     font-weight: 100;
@@ -49,6 +68,7 @@ h1 {
     max-width: 50px;
     padding: 10px 20px;
     text-align: center;
+    transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .about-chose {
@@ -62,11 +82,14 @@ h1 {
 }
 
 .about-content {
-    display: none;
+    display: block;
     position: absolute;
     text-align: center;
     border-radius: 8px;
     z-index: 10;
+    transform: translateY(10px); /* Start slightly below */
+    transition: opacity 0.3s ease, transform 0.3s ease; /* Add animation for smooth fade and move */
+    opacity: 0;
 }
 
 .about-content a {
@@ -76,6 +99,10 @@ h1 {
     background-color: #AE6439;
     display: block;
     border: 1px solid #FFFFFF;
+}
+.about:hover .about-content {
+    opacity: 1; /* Make it fully visible */
+    transform: translateY(0); /* Move it to its final position */
 }
 .about-content a:first-child {
     border-radius: 8px 8px 0px 0px;
@@ -111,6 +138,7 @@ h1 {
     cursor: pointer;
     background-color: #000000;
     border: 2px solid #FFFFFF;
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 .button-link {
     color: #FFFFFF;
@@ -168,7 +196,7 @@ h1 {
     height: 300px;
     overflow: hidden;
     position: relative;
-    object-fit: cover;
+    object-fit: contain;
 }
 .product {
     height: 100%;
@@ -216,4 +244,12 @@ h1 {
 .logo {
     width: 20px;
     margin: auto;
+}
+.sign-in:hover {
+    transform: scale(1.1); /* Slightly scale the button */
+    background-color: #9c4f2d; /* Darker shade for the hover effect */
+}
+.menu a:hover {
+    transform: scale(1.2); /* Slightly scale the menu item */
+    color: white;
 }
