--- a/CSS/home.css
+++ b/CSS/home.css
@@ -219,3 +219,55 @@ h1 {
     transform: scale(1.2); /* Slightly scale the menu item */
     color: white;
 }
+
+/* For desktops */
+@media (min-width: 1200px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+/* For tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+    body {
+        font-size: 16px;
+    }
+}
+
+/* For smartphones */
+@media (max-width: 767px) {
+    .header {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+    }
+    .menu {
+        margin: auto;
+        font-size: 16px;
+    }
+    .main {
+        padding: 40px;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    .main img {
+        width: 10px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
+}
