--- a/CSS/location.css
+++ b/CSS/location.css
@@ -30,7 +30,6 @@ body {
 }
 .container {
     width: 100vw;
-    height: 100vh;
     background-color: #FFFFFF;
     color: #000000;
     display: grid;
@@ -198,4 +197,64 @@ body {
 .menu a:hover {
     transform: scale(1.2); /* Slightly scale the menu item */
     color: black;
+}
+/* For desktops */
+@media (min-width: 1200px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+/* For tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+    body {
+        font-size: 16px;
+    }
+}
+
+/* For smartphones */
+@media (max-width: 767px) {
+    .header {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+    }
+    .menu {
+        margin: auto;
+        font-size: 16px;
+    }
+    .main {
+        padding: 40px;
+        grid-template-columns: 1fr;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    .main img {
+        width: 10px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .locations {
+        padding: 0;
+        padding-bottom: 20px;
+    }
+    .map {
+        width: 100%;
+        height: 400px;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
 }
