--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -231,25 +231,24 @@ h1 {
     transform: scale(1.2); /* Slightly scale the menu item */
     color: white;
 }
-.taste-slider {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    align-items: center;
-    max-width: 100%;
-    width: 90%;
-    height: 130px; /* Adjust based on your image size */
-    object-fit: contain;
-}
+
+/* .taste-slider {
+} */
 
 .slider {
-    display: flex;
+    padding: 0;
+    display: grid;
+    height: 200px;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, auto);
     transition: transform 0.5s ease-in-out; /* Ensure this is 100% * the number of images */
 }
 
 .slider img {
+    margin: auto;
+    height: 100%;
     width: 100%;
-    object-fit: contain;
+    border: 2px solid black;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -273,18 +272,14 @@ button.prev:hover, button.next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 .taste-slider {
-    display: flex;
     transition: transform 0.5s ease-in-out; /* Smooth transition for the sliding effect */
 }
-.image2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 60px;
+/* .image2{
+
 }
 .image3{
-    margin-left: 74px;
-}
+
+} */
 
 /* For desktops */
 @media (min-width: 1200px) {
@@ -320,23 +315,24 @@ button.prev:hover, button.next:hover {
     .main {
         padding: 40px;
         height: auto;
+        grid-template-rows: auto auto;
     }
     .above-main {
         grid-template-columns: 1fr;
         height: auto;
-        grid-gap: 20px;
-        background-color: aqua;
     }
     .below-main {
         grid-template-columns: 1fr;
         height: auto;
-        grid-gap: 20px;
+    }
+    
+    #origin {
+        padding: auto;
+        display: grid;
+        grid-template-rows: 1fr auto;
     }
     .main h1 {
         font-size: 28px;
-    }
-    .main img {
-        width: 10px;
     }
     .main p {
         font-size: 16px;
