--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -310,6 +310,9 @@ body {
     justify-content: space-between;
     margin-top: 30px;
 }
+.head-cart button:last-child {
+    display: none;
+}
 .button-link:hover {
     transform: scale(1.1); /* Slightly scale the button */
     background-color: #9c4f2d; /* Darker shade for the hover effect */
@@ -329,4 +332,67 @@ body {
 .button-link-button:hover, .button-link-button1:hover{
     transform: scale(1.1); /* Slightly scale the button */
     background-color: rgb(19, 195, 19); /* Darker shade for the hover effect */
+}
+/* For desktops */
+@media (min-width: 1200px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+/* For tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+    body {
+        font-size: 16px;
+    }
+}
+
+/* For smartphones */
+@media (max-width: 767px) {
+    .header {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+    }
+    .menu {
+        margin: auto;
+        font-size: 16px;
+    }
+    .main {
+        padding: 40px;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .head-cart {
+        margin: 0;
+        padding: 20px;
+    }
+    .head-cart div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+    }
+    .head-cart .button:last-child {
+        display: block;
+        margin: auto;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
 }
