--- a/CSS/mobile-app.css
+++ b/CSS/mobile-app.css
@@ -222,6 +222,9 @@ body {
 
 /* For smartphones */
 @media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
     .header {
         display: grid;
         grid-template-columns: 1fr;
