--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -305,6 +305,9 @@ button.prev:hover, button.next:hover {
 
 /* For smartphones */
 @media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
     .header {
         display: grid;
         grid-template-columns: 1fr;
