--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -349,6 +349,9 @@ body {
 
 /* For smartphones */
 @media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
     .header {
         display: grid;
         grid-template-columns: 1fr;
