--- a/CSS/home.css
+++ b/CSS/home.css
@@ -236,6 +236,9 @@ h1 {
 
 /* For smartphones */
 @media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
     .header {
         display: grid;
         grid-template-columns: 1fr;
