--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -285,6 +285,9 @@ h1 {
 
 /* For smartphones */
 @media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
     .header {
         display: grid;
         grid-template-columns: 1fr;
