--- a/CSS/home.css
+++ b/CSS/home.css
@@ -30,13 +30,14 @@ h1 {
 }
 body {
     margin: 0px;
+    padding: 0;
     font-family: Arial;
     background-color: #756763;
     animation: slideinleft 0.3s ease-in;
 }
 .container {
+    box-sizing: border-box;
     position: relative;
-    width: 100vw;
     background-image: url(../IMAGE/home.png);
     background-position: 0 -300px;
     background-repeat: no-repeat;
@@ -45,6 +46,7 @@ body {
     color: #FFFFFF;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    grid-template-columns: 1fr;
 }
 .header {
     top: 0px;
@@ -66,6 +68,12 @@ h1 {
 }
 .brand {
     padding-left: 40px;
+}
+.box-menu {
+    margin: auto;
+}
+.logo-menu {
+    display: none;
 }
 .menu {
     margin: auto;
@@ -133,7 +141,7 @@ h1 {
     margin: auto;
     display: grid;
     grid-template-columns: repeat( 3,auto);
-    grid-gap: 20px;
+    grid-gap: 0px;
 }
 .head-left a {
     max-width: 20px;
@@ -167,6 +175,10 @@ h1 {
 .head-main p {
     margin: auto;
 }
+.main-content {
+    width: 420px;
+}
+
 .main button {
     width: 120px;
     margin: 20px;
@@ -183,10 +195,12 @@ h1 {
     margin: auto;
 }
 .bottom {
+    margin: 0;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr 1fr;
     border-top: 1px solid #FFFFFF;
-    padding: 20px;
+    padding: 20px 0;
     backdrop-filter: brightness(40%);
 }
 
@@ -201,6 +215,11 @@ h1 {
     grid-gap: 5px;
 }
 .contact {
+    margin: auto;
+    display: grid;
+    grid-gap: 10px;
+}
+.contact p {
     margin: auto;
 }
 .logo {
@@ -219,18 +238,40 @@ h1 {
     transform: scale(1.2); /* Slightly scale the menu item */
     color: white;
 }
-
-/* For desktops */
-@media (min-width: 1200px) {
-    body {
-        font-size: 18px;
-    }
+.logo-small {
+    margin: auto;
+    width: 10px;
 }
 
 /* For tablets */
 @media (min-width: 768px) and (max-width: 1199px) {
-    body {
-        font-size: 16px;
+    .container {
+        background-position: 0;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 40px;
+    }
+    .logo-small {
+        margin-left: 10px;
+    }
+    .main h1 {
+        font-size: 32px;
+    }
+    .main p {
+        font-size: 18px;
     }
 }
 
@@ -241,18 +282,49 @@ h1 {
     }
     .header {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr auto;
         grid-gap: 20px;
         padding: 20px;
     }
     .header h1 {
+        grid-column: 1 / 3;
         padding: 0px;
         margin: auto;
         font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 0;
     }
     .menu {
-        margin: auto;
-        font-size: 16px;
+        display: none;
+    }
+    .logo-menu {
+        display: block;
+    }
+    .menu-slide {
+        display: none;
+    }
+    .menu-slide a {
+        text-align: center;
+        color: #FFFFFF;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .logo-menu:hover .menu-slide {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .logo-menu:hover {
+        margin-top: 11px;
+    }
+    .head-left {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    .sign-in {
+        margin-right: 0;
     }
     .main {
         padding: 40px;
@@ -260,11 +332,22 @@ h1 {
     .main h1 {
         font-size: 28px;
     }
-    .main img {
-        width: 10px;
+    
+    .head-main {
+        width: auto;
+        grid-gap: 0px;
+    }
+    .head-main p {
+        margin: auto;
+    }
+    .head-main p:last-child {
+        margin-left: 10px;
     }
     .main p {
         font-size: 16px;
+    }
+    .main-content {
+        width: 100%;
     }
     .bottom {
         font-size: 14px;
