--- a/CSS/location.css
+++ b/CSS/location.css
@@ -29,8 +29,6 @@ body {
     animation: slideinleft 0.3s ease-in;
 }
 .container {
-    width: 100vw;
-    height: 100vh;
     background-color: #FFFFFF;
     color: #000000;
     display: grid;
@@ -44,6 +42,12 @@ body {
 }
 .brand {
     padding-left: 40px;
+}
+.box-menu {
+    margin: auto;
+}
+.logo-menu {
+    display: none;
 }
 .menu {
     margin: auto;
@@ -142,7 +146,6 @@ body {
     grid-gap: 20px;
 }
 .where {
-    height: 100px;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
@@ -201,15 +204,37 @@ body {
 }
 /* For desktops */
 @media (min-width: 1200px) {
-    body {
-        font-size: 18px;
+    .container {
+        height: 100vh;
     }
 }
 
 /* For tablets */
 @media (min-width: 768px) and (max-width: 1199px) {
-    body {
-        font-size: 16px;
+    .container {
+        height: 100vh;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .logo-small {
+        margin-left: 10px;
+    }
+    .main h1 {
+        font-size: 32px;
+    }
+    .main p {
+        font-size: 18px;
     }
 }
 
@@ -253,6 +278,85 @@ body {
     .map {
         width: 100%;
         height: 400px;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 0;
+    }
+    .menu {
+        display: none;
+    }
+    .logo-menu {
+        display: block;
+    }
+    .menu-slide {
+        display: none;
+    }
+    .menu-slide a {
+        text-align: center;
+        color: #000000;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .logo-menu:hover .menu-slide {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .logo-menu:hover {
+        margin-top: 11px;
+    }
+    .head-left {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    .sign-in {
+        margin-right: 0;
+    }
+    .main {
+        padding: 40px;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    
+    .head-main {
+        width: auto;
+        grid-gap: 0px;
+    }
+    .head-main p {
+        margin: auto;
+    }
+    .head-main p:last-child {
+        margin-left: 10px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .location {
+        grid-template-columns: 1fr;
+    }
+    .main-content {
+        width: 100%;
     }
     .bottom {
         font-size: 14px;
