--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -41,9 +41,8 @@ body {
     animation: slideinleft 0.3s ease-in;
 }
 .container {
-    width: 100vw;
     background-image: url(../IMAGE/home.png);
-    background-position: 0 -300px;
+    background-position: 0 0px;
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
@@ -70,7 +69,12 @@ h1 {
     font-family: 'Italianno';
     color: white;
     font-size: 40px;
-
+}
+.box-menu {
+    margin: auto;
+}
+.logo-menu {
+    display: none;
 }
 .menu {
     margin: auto;
@@ -162,7 +166,8 @@ h1 {
 }
 .main {
     display: grid;
-    grid-template-rows: 350px auto;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr;
     padding: 20px 80px;
     grid-gap: 20px;
     color: #000000;
@@ -236,13 +241,12 @@ h1 {
     justify-content: center;
     overflow: hidden;
     align-items: center;
-    max-width: 100%;
-    width: 90%;
     height: 130px; /* Adjust based on your image size */
     object-fit: contain;
 }
 
 .slider {
+    height: 200px;
     display: flex;
     transition: transform 0.5s ease-in-out; /* Ensure this is 100% * the number of images */
 }
@@ -301,64 +305,28 @@ button.prev:hover, button.next:hover {
 @media (min-width: 768px) and (max-width: 1199px) {
     .header {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 20px 40px;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
     }
     .header h1 {
-        font-size: 45px;
-        margin: auto 0;
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
     }
-    .menu {
-        display: grid;
-        grid-template-columns: repeat(3, auto) auto;
-        gap: 20px;
+    .box-menu {
+        margin-left: 40px;
     }
-    .menu a {
-        font-size: 18px;
-        padding: 10px 20px;
+    .logo-small {
+        margin-left: 10px;
     }
-    .main {
-        display: grid;
-        grid-template-rows: auto auto;
-        gap: 15px;
-        padding: 30px;
-    }
-    .above-main {
-        grid-template-columns: 270px 1fr 270px;
-        gap: 15px;
-    }
-    .below-main {
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 15px;
-    }
-    .bottom {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding: 20px 40px;
-    }
-    .follow {
-        font-size: 16px;
-    }
-    .contact {
-        font-size: 16px;
+    .main h1 {
+        font-size: 32px;
     }
     .main p {
         font-size: 18px;
-    }
-    .main h1{
-        font-size: 40px;
-    }
-    .image2{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 40px;
-    }
-    .image3{
-        margin-left: 35px;
-    }
-    .image1{
-        height: 200px;
     }
 }
 
@@ -408,6 +376,82 @@ button.prev:hover, button.next:hover {
     }
     .main p {
         font-size: 16px;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 0;
+    }
+    .menu {
+        display: none;
+    }
+    .logo-menu {
+        display: block;
+    }
+    .menu-slide {
+        display: none;
+    }
+    .menu-slide a {
+        text-align: center;
+        color: #FFFFFF;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .logo-menu:hover .menu-slide {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .logo-menu:hover {
+        margin-top: 11px;
+    }
+    .head-left {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    .sign-in {
+        margin-right: 0;
+    }
+    .main {
+        padding: 40px;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    
+    .head-main {
+        width: auto;
+        grid-gap: 0px;
+    }
+    .head-main p {
+        margin: auto;
+    }
+    .head-main p:last-child {
+        margin-left: 10px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .main-content {
+        width: 100%;
     }
     .bottom {
         font-size: 14px;
