--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -415,8 +415,14 @@ h1 {
     .sign-in {
         margin-right: 0;
     }
+    .head {
+        padding: 20px;
+    }
+    .text-overlay {
+        font-size: 1rem;
+    }
     .main {
-        padding: 40px;
+        padding: 20px;
     }
     .main h1 {
         font-size: 28px;
