--- a/CSS/mobile-app.css
+++ b/CSS/mobile-app.css
@@ -41,7 +41,6 @@ body {
     animation: slideinleft 0.3s ease-in;
 }
 .container {
-    width: 100vw;
     background-image: url(../IMAGE/home.png);
     background-position: 0 -50px;
     background-repeat: no-repeat;
@@ -64,6 +63,12 @@ body {
     font-family: 'Italianno';
     color: white;
     font-weight: 500;
+}
+.box-menu {
+    margin: auto;
+}
+.logo-menu {
+    display: none;
 }
 .menu {
     margin: auto;
@@ -227,35 +232,76 @@ body {
     }
     .header {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr auto;
         grid-gap: 20px;
         padding: 20px;
     }
     .header h1 {
+        grid-column: 1 / 3;
         padding: 0px;
         margin: auto;
         font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 0;
     }
     .menu {
-        margin: auto;
-        font-size: 16px;
+        display: none;
+    }
+    .logo-menu {
+        display: block;
+    }
+    .menu-slide {
+        display: none;
+    }
+    .menu-slide a {
+        text-align: center;
+        color: #FFFFFF;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .logo-menu:hover .menu-slide {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .logo-menu:hover {
+        margin-top: 11px;
+    }
+    .head-left {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    .sign-in {
+        margin-right: 0;
     }
     .main {
+        padding: 10px;
+    }
+    .main div {
+        grid-template-columns: 1fr;
         padding: 0;
     }
     .main h1 {
         font-size: 28px;
     }
-    .main div {
-        padding: 0;
-        display: grid;
-        grid-template-columns: 1fr;
+    
+    .head-main {
+        width: auto;
+        grid-gap: 0px;
     }
-    .main div img {
+    .head-main p {
         margin: auto;
+    }
+    .head-main p:last-child {
+        margin-left: 10px;
     }
     .main p {
         font-size: 16px;
+    }
+    .main-content {
+        width: 100%;
     }
     .bottom {
         font-size: 14px;
