--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -30,8 +30,6 @@ body {
     animation: slideinleft 0.3s ease-in;
 }
 .container {
-    height: auto;
-    width: 100vw;
     background-color: #e7e5e5;
     color: #000000;
     display: grid;
@@ -45,6 +43,12 @@ body {
 }
 .brand {
     padding-left: 40px;
+}
+.box-menu {
+    margin: auto;
+}
+.logo-menu {
+    display: none;
 }
 .menu {
     margin: auto;
@@ -373,7 +377,6 @@ body {
         font-size: 16px;
     }
     .main {
-        padding: 10px;
         grid-template-columns: 1fr;
         grid-gap: 20px;
     }
@@ -395,6 +398,123 @@ body {
     .head-cart .button:last-child {
         display: block;
         margin: auto;
+    }
+    .bottom {
+        font-size: 14px;
+    }
+    .follow div {
+        margin: auto;
+        margin-left: 0;
+    }
+}
+/* For tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+    .container {
+        background-position: 0;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 40px;
+    }
+    .logo-small {
+        margin-left: 10px;
+    }
+    .main h1 {
+        font-size: 32px;
+    }
+    .main p {
+        font-size: 18px;
+    }
+}
+
+/* For smartphones */
+@media (max-width: 767px) {
+    .container {
+        background-position: 0;
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    .header h1 {
+        grid-column: 1 / 3;
+        padding: 0px;
+        margin: auto;
+        font-size: 65px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .box-menu {
+        margin-left: 0;
+    }
+    .menu {
+        display: none;
+    }
+    .logo-menu {
+        display: block;
+        margin: auto;
+    }
+    .menu-slide {
+        display: none;
+    }
+    .menu-slide a {
+        text-align: center;
+        color: #FFFFFF;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .logo-menu:hover .menu-slide {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .logo-menu:hover {
+        margin-top: 11px;
+        margin-left: 0;
+        padding: 0;
+    }
+    .logo-menu:hover .head-left {
+        display: none;
+    }
+    .head-left {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    .sign-in {
+        margin-right: 0;
+    }
+    .main h1 {
+        font-size: 28px;
+    }
+    
+    .head-main {
+        width: auto;
+        grid-gap: 0px;
+    }
+    .head-main p {
+        margin: auto;
+    }
+    .head-main p:last-child {
+        margin-left: 10px;
+    }
+    .main p {
+        font-size: 16px;
+    }
+    .main-content {
+        width: 100%;
     }
     .bottom {
         font-size: 14px;
